--- a/homework-2/TaskTracker/src/main/resources/application.properties
+++ b/homework-2/TaskTracker/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+tasks.load.file=src main resources tasks.csv
+users.load.file=src main resources users.csv
+tasks.write.file=src main resources writetasks.csv
+users.write.file=src main resources writeusers.csv
