--- a/homework-2/TaskTracker/src/main/resources/application.yml
+++ b/homework-2/TaskTracker/src/main/resources/application.yml
@@ -8,3 +8,22 @@ users:
     file: src main resources users.csv
   write:
     file: src main resources writeusers.csv
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        trace: false
+        web-allow-others: false
