full dataSpring moving. work crud commands / work save to csv files. TODO read from csv, if delete_all was done. TODO new tests with repos!

--- a/homework-2/TaskTracker/src/main/resources/application.yml
+++ b/homework-2/TaskTracker/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+tasks:
+  file: src main resources tasks.csv
+users:
+  file: src main resources users.csv
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/taskTrackerDB
