--- a/homework-2/TaskTracker/src/main/resources/application.yml
+++ b/homework-2/TaskTracker/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
+        format_sql: true
         jdbc:
           lob:
             non_contextual_creation: true
