--- a/homework-2/TaskTracker/build.gradle
+++ b/homework-2/TaskTracker/build.gradle
@@ -27,6 +27,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+
     implementation 'org.postgresql:postgresql:42.4.0'
     implementation 'org.flywaydb:flyway-core'
     compileOnly 'org.projectlombok:lombok'
